Create URLs directly with constructor.